[Payments] Center payment request dialog header

Bug: 840803
Change-Id: I3cf9698c58f8c7e885b16123c05e4a15f8ba53c8
Reviewed-on: https://chromium-review.googlesource.com/1049952
Reviewed-by: Mathieu Perreault <mathp@chromium.org>
Commit-Queue: Ganggui Tang <gogerald@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556800}
Former-commit-id: 28df35396ca1d1013c7767fb44a4fcc65e751b7f