chrome/browser/ui/views/payments/payment_handler_web_flow_view_controller.cc
@@ -184,7 +184,7 @@ void PaymentHandlerWebFlowViewController::FillContentView(
   // time of first layout (nothing has loaded yet). Because of this, set it to.
   // total_dialog_height - header_height. On the other hand, the width will be
   // properly set so it can be 0 here.
-  web_view->SetPreferredSize(gfx::Size(0, kDialogHeight - 68));
+  web_view->SetPreferredSize(gfx::Size(0, kDialogHeight - 75));
   content_view->AddChildView(web_view.release());
 }
 
